chore: clean and update claude code features

--- a/klask-rs/.env.example
+++ b/klask-rs/.env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-DATABASE_URL=postgres://klask:klask@postgres:5432/klask_rs
+DATABASE_URL=postgres://klask_user:klask_password@postgres:5432/klask_dev
 
 # Application Configuration
 RUST_LOG=info
