--- a/klask-react/package.json
+++ b/klask-react/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.0",
     "i18next": "^25.5.2",
+    "prism-react-renderer": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
