feat: optimize helm chart and switch to prism-react-renderer for highlighting

--- a/charts/klask/templates/backend/deployment.yaml
+++ b/charts/klask/templates/backend/deployment.yaml
@@ -82,7 +82,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: {{ include "klask.postgresql.secretName" . }}
-                  key: password
+                  key: klask-password
             {{- else if .Values.backend.env.database.url }}
             - name: DATABASE_URL
               valueFrom:
