--- a/charts/klask/templates/postgresql/secret.yaml
+++ b/charts/klask/templates/postgresql/secret.yaml
@@ -13,11 +13,11 @@ type: Opaque
 data:
   {{- if $existingSecret }}
   # Preserve existing passwords across upgrades
-  password: {{ index $existingSecret.data "password" }}
+  klask-password: {{ index $existingSecret.data "klask-password" }}
   postgres-password: {{ index $existingSecret.data "postgres-password" }}
   {{- else }}
   # Generate new random passwords on first install
-  password: {{ .Values.postgresql.auth.password | default (randAlphaNum 32) | b64enc | quote }}
+  klask-password: {{ .Values.postgresql.auth.password | default (randAlphaNum 32) | b64enc | quote }}
   postgres-password: {{ .Values.postgresql.auth.postgresPassword | default (randAlphaNum 32) | b64enc | quote }}
   {{- end }}
 {{- end }}
