docs: modernize README and deployment documentation for v2.x
Update project documentation to reflect the Rust modernization:

README.md:
- Rewrite to highlight modern architecture (Rust + React)
- Add comprehensive feature list (multi-repo indexing, real-time search, JWT auth)
- Document quick start with Docker Compose and manual setup
- Add detailed project structure overview
- Include Kubernetes/Helm deployment examples
- Update tech stack to Rust, Axum, Tantivy, React 18, Vite, TailwindCSS
- Remove outdated JHipster and Java references

docker-compose.yml:
- Add clear documentation header with quick start instructions
- Document optional tools usage with --profile flag

helm-example.yaml (NEW):
- Create comprehensive Helm values example
- Include all major configuration sections (backend, frontend, PostgreSQL, ingress)
- Add production-ready security and HA configurations
- Document resource limits, autoscaling, and monitoring options
- Include inline comments for every configuration option

DEPLOYMENT.md:
- Rewrite with modern deployment options (Docker Compose + Kubernetes)
- Add local development setup guide
- Document Helm installation and upgrade procedures
- Include production best practices for security, resources, and HA
- Add troubleshooting section

This provides clear, up-to-date documentation for deploying Klask v2.x.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,15 @@
+# Klask Development Environment
+# Full-stack code search engine with Rust backend and React frontend
+#
+# Quick Start:
+#   docker-compose up -d
+#   Access frontend: http://localhost:5173
+#   Access backend API: http://localhost:3000
+#   Access pgAdmin: http://localhost:8080 (with --profile tools)
+#
+# With optional tools (pgAdmin, Redis):
+#   docker-compose --profile tools up -d
+
 services:
     # PostgreSQL Database
     postgres:
