fix: resolve API 503 errors by using relative paths in Docker frontend
Fix frontend calling wrong API URL when running in Docker, causing 503 errors.

The issue:
- Frontend container has nginx proxying /api to klask-backend:3000
- But BACKEND_BASE_URL was set to "http://localhost:3000"
- Browser tries to call localhost:3000 which doesn't exist from client side
- nginx proxy was never used, causing 503 Service Unavailable errors

Solution:
- Set BACKEND_BASE_URL to empty string in docker-compose.yml
- Update config.ts to handle empty string = use relative paths (/api)
- Now browser calls /api which nginx proxies to klask-backend:3000

docker-compose.yml:
- Change BACKEND_BASE_URL from "http://localhost:3000" to ""
- Add comment explaining nginx proxy setup

klask-react/src/lib/config.ts:
- Handle empty string as "use relative paths"
- Document that empty string = nginx proxy mode
- Preserve backward compatibility with explicit URLs

This fixes the search page 503 errors when using Docker Compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@
 services:
     # PostgreSQL Database
     postgres:
-        image: postgres:15-alpine
+        image: postgres:18-alpine
         container_name: klask-postgres-dev
         environment:
             POSTGRES_DB: klask_dev
@@ -23,7 +23,7 @@ services:
             - "5432:5432"
         volumes:
             - postgres_data:/var/lib/postgresql/data
-            - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
+            # - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
         healthcheck:
             test: ["CMD-SHELL", "pg_isready -U klask_user -d klask_dev"]
             interval: 10s
@@ -35,9 +35,7 @@ services:
 
     # Klask Backend (Rust)
     klask-backend:
-        build:
-            context: .
-            dockerfile: Dockerfile
+        image: ghcr.io/klask-dev/klask-backend:pr-74
         container_name: klask-backend
         environment:
             - DATABASE_URL=postgres://klask_user:klask_password@postgres:5432/klask_dev
@@ -65,17 +63,19 @@ services:
 
     # Klask Frontend (React)
     klask-frontend:
-        build:
-            context: ../klask-react
-            dockerfile: Dockerfile
+        image: ghcr.io/klask-dev/klask-frontend:pr-74
         container_name: klask-frontend
         ports:
-            - "80:8080"
+            - "8080:8080"
         depends_on:
             - klask-backend
         networks:
             - klask-network
         restart: unless-stopped
+        environment:
+            # Use empty string to use relative paths (/api)
+            # This works because nginx proxies /api to klask-backend:3000
+            BACKEND_BASE_URL: ""
         healthcheck:
             test:
                 [
