--- a/klask-react/nginx.conf
+++ b/klask-react/nginx.conf
@@ -2,6 +2,11 @@ server {
     listen 8080;
     server_name localhost;
 
+    # Enable DNS resolution for dynamic backend address
+    # Docker daemon usually runs on 127.0.0.11:53
+    resolver 127.0.0.11 valid=10s;
+    resolver_timeout 5s;
+
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
