feat: revert previous tentatives for fixing 503

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:15
+        image: postgres:18-alpine
         env:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: klask_test
@@ -92,25 +92,25 @@ jobs:
     runs-on: ubuntu-latest
     # Build pour tous les événements (PR, push main/master, tags)
     # Plus de problème de double build car plus de push sur branches features
-    
+
     permissions:
       contents: read
       packages: write
-    
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-    
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    
+
     - name: Log in to Container Registry
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    
+
     - name: Extract metadata (frontend)
       id: meta-frontend
       uses: docker/metadata-action@v5
@@ -138,7 +138,7 @@ jobs:
           type=semver,pattern={{major}}.{{minor}}
           type=semver,pattern={{major}}
           type=raw,value=latest,enable={{is_default_branch}}
-    
+
     - name: Build and push frontend
       uses: docker/build-push-action@v5
       with:
@@ -180,11 +180,11 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     # Security scan pour tous les builds
-    
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-      
+
     - name: Determine image tag for security scan
       id: tag
       run: |
@@ -209,21 +209,21 @@ jobs:
         image-ref: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.FRONTEND_IMAGE_NAME }}:${{ steps.tag.outputs.tag }}
         format: 'sarif'
         output: 'trivy-frontend.sarif'
-    
+
     - name: Run Trivy vulnerability scanner (backend)
       uses: aquasecurity/trivy-action@master
       with:
         image-ref: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.BACKEND_IMAGE_NAME }}:${{ steps.tag.outputs.tag }}
         format: 'sarif'
         output: 'trivy-backend.sarif'
-    
+
     - name: Upload Trivy scan results (frontend)
       uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: 'trivy-frontend.sarif'
         category: 'trivy-frontend'
-      
-    - name: Upload Trivy scan results (backend)  
+
+    - name: Upload Trivy scan results (backend)
       uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: 'trivy-backend.sarif'
