refactor: improve Index Management layout organization
- Move 'Active' badge to the same line as 'Auto-refresh Interval' label
- Position Refresh button directly below the interval dropdown
- Relocate Cache Statistics to the left column (under Tuning)
- Simplify right column to focus on Segments visualization
- Improves visual hierarchy and reduces unused whitespace

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
             - PORT=3000
             - HOST=0.0.0.0
             - ENCRYPTION_KEY=${ENCRYPTION_KEY:-default-encryption-key-change-me}
+            - JWT_SECRET=${JWT_SECRET:-default-jwt-key-change-me}
         ports:
             - "3000:3000"
         volumes:
