chore: fix Helm chart lint & remove unused test

--- a/charts/klask/Chart.yaml
+++ b/charts/klask/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v2
+icon: https://raw.githubusercontent.com/klask-dev/klask-dev/refs/heads/master/resources/images/klask-dev-clean-v2.svg
 name: klask
 description: A Helm chart for Klask - Modern code search engine written in Rust
 type: application
