feat: disable register login page

--- a/charts/klask/templates/backend/deployment.yaml
+++ b/charts/klask/templates/backend/deployment.yaml
@@ -6,6 +6,12 @@ metadata:
   labels:
     {{- include "klask.labels" . | nindent 4 }}
     app.kubernetes.io/component: backend
+    {{- with .Values.extraLabels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+    {{- with .Values.backend.extraLabels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.backend.replicaCount }}
@@ -27,6 +33,12 @@ spec:
       labels:
         {{- include "klask.labels" . | nindent 8 }}
         app.kubernetes.io/component: backend
+        {{- with .Values.extraLabels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.backend.extraLabels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
         {{- with .Values.podLabels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
