--- a/klask-rs/.env.example
+++ b/klask-rs/.env.example
@@ -13,6 +13,10 @@ ENCRYPTION_KEY=your-super-secret-encryption-key-32-chars-minimum
 JWT_SECRET=your-super-secret-jwt-key-change-in-production-min-32-chars
 JWT_EXPIRES_IN=24h
 
+# Registration Configuration
+# Set to false to disable user registration (only existing users and setup can create accounts)
+ALLOW_REGISTRATION=true
+
 # Search Configuration
 SEARCH_INDEX_PATH=./index
 
