--- a/charts/klask/values.yaml
+++ b/charts/klask/values.yaml
@@ -43,6 +43,9 @@ podAnnotations: {}
 ## @param podLabels Extra labels for Klask pods
 podLabels: {}
 
+## @param extraLabels Extra labels to add to all resources
+extraLabels: {}
+
 ## @param podSecurityContext Configure Pod security context
 ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod
 podSecurityContext:
@@ -185,6 +188,9 @@ backend:
 
   ## @param replicaCount Number of backend replicas to deploy
   replicaCount: 1
+
+  ## @param backend.extraLabels Extra labels for backend resources
+  extraLabels: {}
 
   ## @param backend.image Backend image configuration
   image:
@@ -335,6 +341,9 @@ frontend:
   ## @param replicaCount Number of backend replicas to deploy
   replicaCount: 1
 
+  ## @param frontend.extraLabels Extra labels for frontend resources
+  extraLabels: {}
+
   ## @param frontend.image Frontend image configuration
   image:
     ## @param frontend.image.repository Frontend image repository
@@ -402,6 +411,9 @@ postgresql:
   ## @param postgresql.enabled Enable embedded PostgreSQL deployment
   ## When false, external database must be configured
   enabled: true
+
+  ## @param postgresql.extraLabels Extra labels for PostgreSQL resources
+  extraLabels: {}
 
   ## @param postgresql.image PostgreSQL image configuration
   image:
@@ -543,6 +555,25 @@ networkPolicy:
   backend:
     ## @param networkPolicy.backend.allowExternal Allow backend to make external requests
     allowExternal: true
+    ## @param networkPolicy.backend.allowHealthChecks Allow health checks from Kubernetes nodes
+    allowHealthChecks: false
+    ## @param networkPolicy.backend.healthCheckSources Sources allowed for health checks (ipBlock, namespaceSelector, podSelector)
+    healthCheckSources: []
+    ## Example for allowing from node network:
+    ## healthCheckSources:
+    ##   - ipBlock:
+    ##       cidr: 10.0.2.0/24
+
+  ## @param networkPolicy.frontend Frontend-specific NetworkPolicy settings
+  frontend:
+    ## @param networkPolicy.frontend.allowHealthChecks Allow health checks from Kubernetes nodes
+    allowHealthChecks: false
+    ## @param networkPolicy.frontend.healthCheckSources Sources allowed for health checks (ipBlock, namespaceSelector, podSelector)
+    healthCheckSources: []
+    ## Example for allowing from node network:
+    ## healthCheckSources:
+    ##   - ipBlock:
+    ##       cidr: 10.0.2.0/24
 
 ## @section Metrics parameters
 
