ci: avoid empty pipelines for build and helm

--- a/.github/workflows/2-build-images.yml
+++ b/.github/workflows/2-build-images.yml
@@ -5,7 +5,10 @@ on:
   workflow_run:
     workflows: ["1️⃣ Tests"]
     types:
-    - completed
+      - completed
+    branches:
+      - main
+      - master
 
 env:
   REGISTRY: ghcr.io
