--- a/.github/workflows/1-tests.yml
+++ b/.github/workflows/1-tests.yml
@@ -3,7 +3,7 @@ name: 1️⃣ Tests
 on:
   push:
     branches: [ main, master ]  # Seulement les branches principales
-    tags: [ 'v*' ]             # Tags de version (v1.0.0, v2.1.3, etc.)
+    tags: [ '*' ]             # Tags de version (1.0.0, 2.1.3, etc.)
   pull_request:
     branches: [ main, master ]  # Pull requests vers les branches principales
   workflow_dispatch:             # Déclenchement manuel si besoin
