--- a/.github/workflows/2-build-images.yml
+++ b/.github/workflows/2-build-images.yml
@@ -21,7 +21,11 @@ jobs:
     # Condition pour exécuter ce job seulement si :
     # - Le workflow précédent a réussi
     # - Le push vient bien de main ou master
-    if: ${{ github.event.workflow_run.conclusion == 'success' && startsWith(github.event.workflow_run.head_branch, 'main') || startsWith(github.event.workflow_run.head_branch, 'master') }}
+    if: >
+        ${{ github.event.workflow_run.conclusion == 'success' &&
+            ( startsWith(github.event.workflow_run.head_branch, 'main')
+            || startsWith(github.event.workflow_run.head_branch, 'master') )
+        }}
     runs-on: ubuntu-latest
 
     permissions:
