--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,13 +2,20 @@
 # Full-stack code search engine with Rust backend and React frontend
 #
 # Quick Start:
-#   docker-compose -f docker-compose.dev.yml up -d
-#   Access frontend: http://localhost:8080
-#   Access backend API: http://localhost:3000
+#   docker compose -f docker-compose.dev.yml up -d
+#   A welcome message will display URLs once all services are ready!
+#   Access frontend: http://localhost:8081
+#   Access backend API: http://localhost:3001
 #   Access pgAdmin: http://localhost:5050 (with --profile tools)
 #
+# Startup Order:
+#   1. PostgreSQL starts first
+#   2. Backend waits for database to be healthy
+#   3. Frontend waits for backend to be healthy
+#   4. Welcome service displays URLs when everything is ready
+#
 # With optional tools (pgAdmin, Redis):
-#   docker-compose -f docker-compose.dev.yml --profile tools up -d
+#   docker compose -f docker-compose.dev.yml --profile tools up -d
 
 services:
     # PostgreSQL Database
@@ -20,15 +27,9 @@ services:
             POSTGRES_USER: klask_user
             POSTGRES_PASSWORD: klask_password
         ports:
-            - "5432:5432"
+            - "5433:5432"
         volumes:
             - postgres_data:/var/lib/postgresql/data
-            # - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
-        healthcheck:
-            test: ["CMD-SHELL", "pg_isready -U klask_user -d klask_dev"]
-            interval: 2s
-            timeout: 5s
-            retries: 5
         networks:
             - klask-network
         restart: unless-stopped
@@ -45,8 +46,9 @@ services:
             - PORT=3000
             - HOST=0.0.0.0
             - ENCRYPTION_KEY=${ENCRYPTION_KEY:-default-encryption-key-change-me}
+            - JWT_SECRET=${JWT_SECRET:-default-jwt-key-change-me}
         ports:
-            - "3000:3000"
+            - "3001:3000"
         volumes:
             - klask_data:/app/data
             - klask_index:/app/index
@@ -56,12 +58,7 @@ services:
         networks:
             - klask-network
         restart: unless-stopped
-        healthcheck:
-            test: ["CMD", "curl", "-f", "http://localhost:3000/api/status"]
-            interval: 30s
-            timeout: 10s
-            retries: 3
-            start_period: 40s
+
 
     # Klask Frontend (React)
     klask-frontend:
@@ -70,29 +67,47 @@ services:
             dockerfile: Dockerfile
         container_name: klask-frontend
         ports:
-            - "8080:8080"
-        depends_on:
-            - klask-backend
+            - "8081:8080"
         networks:
             - klask-network
         restart: unless-stopped
         environment:
             # Backend is exposed on localhost:3000, frontend calls it directly
             # No nginx proxy needed since backend has permissive CORS
-            BACKEND_BASE_URL: "http://localhost:3000"
-        healthcheck:
-            test:
-                [
-                    "CMD",
-                    "wget",
-                    "--no-verbose",
-                    "--tries=1",
-                    "--spider",
-                    "http://localhost:8080/health",
-                ]
-            interval: 30s
-            timeout: 5s
-            retries: 3
+            BACKEND_BASE_URL: "http://localhost:3001"
+
+    # Welcome message service - displays URLs and status once everything is ready
+    welcome:
+        image: alpine:latest
+        container_name: klask-welcome
+        depends_on:
+            klask-backend:
+                condition: service_healthy
+            klask-frontend:
+                condition: service_healthy
+        networks:
+            - klask-network
+        restart: "no"
+        entrypoint: /bin/sh
+        command:
+            - -c
+            - |
+              echo ""
+              echo "╔════════════════════════════════════════════════════════════════╗"
+              echo "║                    🚀 Klask is Ready! 🚀                       ║"
+              echo "╚════════════════════════════════════════════════════════════════╝"
+              echo ""
+              echo "📊 Frontend:  http://localhost:8081"
+              echo "🔌 Backend:   http://localhost:3001"
+              echo "🗄️  Database:  localhost:5432"
+              echo ""
+              echo "📚 Useful commands:"
+              echo "  • View logs:   docker logs -f <container_name>"
+              echo "  • Stop:        docker compose -f docker-compose.dev.yml down"
+              echo "  • With tools:  docker compose -f docker-compose.dev.yml --profile tools up -d"
+              echo ""
+              echo "✅ All services are healthy and running!"
+              echo ""
 
     # Optional: pgAdmin for database management
     pgadmin:
