--- a/charts/klask/templates/secret.yaml
+++ b/charts/klask/templates/secret.yaml
@@ -14,21 +14,48 @@ data:
 {{- end }}
 ---
 {{- if and .Values.backend.enabled (not .Values.backend.existingSecret) }}
-{{- if or .Values.backend.secrets (and (not .Values.postgresql.enabled) .Values.backend.env.database.url) }}
+{{- if and (not .Values.postgresql.enabled) .Values.backend.env.database.url }}
+{{- $secretName := include "klask.backend.secretName" . }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "klask.fullname" . }}-backend
+  name: {{ $secretName }}
   labels:
     {{- include "klask.labels" . | nindent 4 }}
     app.kubernetes.io/component: backend
 type: Opaque
 data:
-  {{- if and (not .Values.postgresql.enabled) .Values.backend.env.database.url }}
   database-url: {{ .Values.backend.env.database.url | b64enc | quote }}
-  {{- end }}
-  {{- range $key, $value := .Values.backend.secrets }}
-  {{ $key }}: {{ $value | b64enc | quote }}
-  {{- end }}
 {{- end }}
+{{- end }}
+---
+{{- if and .Values.backend.enabled (not .Values.backend.existingAuthSecret) }}
+{{- $secretName := include "klask.backend.secretName" . }}
+{{- $authSecretName := printf "%s-auth" $secretName }}
+{{- $existingAuthSecret := lookup "v1" "Secret" .Release.Namespace $authSecretName }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ $authSecretName }}
+  labels:
+    {{- include "klask.labels" . | nindent 4 }}
+    app.kubernetes.io/component: backend
+    app.kubernetes.io/subcomponent: auth
+  annotations:
+    "helm.sh/resource-policy": keep
+type: Opaque
+data:
+  {{- if $existingAuthSecret }}
+  # Preserve existing secrets across upgrades
+  {{- if index $existingAuthSecret.data "ENCRYPTION_KEY" }}
+  ENCRYPTION_KEY: {{ index $existingAuthSecret.data "ENCRYPTION_KEY" }}
+  {{- end }}
+  {{- if index $existingAuthSecret.data "JWT_SECRET" }}
+  JWT_SECRET: {{ index $existingAuthSecret.data "JWT_SECRET" }}
+  {{- end }}
+  {{- else }}
+  # Generate new secrets on first install if not provided
+  ENCRYPTION_KEY: {{ .Values.backend.auth.encryptionKey | default (randAlphaNum 32) | b64enc | quote }}
+  JWT_SECRET: {{ .Values.backend.auth.jwtSecret | default (randAlphaNum 32) | b64enc | quote }}
+  {{- end }}
 {{- end }}
